kubernetes/apps/bambuddy/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: bambuddy-ingress
  namespace: tools
  annotations:
    external-dns.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`3dprint.sobrinho.pt`)
      kind: Rule
      services:
        - name: bambuddy
          port: app
  tls:
    secretName: bambuddy-cert
